# distill

./: .gitignore  .mutatest.yaml  .pre-commit-config.yaml  .python-version  ARM_PYTHON_SETUP.md  BASELINE_SUMMARY.txt  CHANGELOG.md  COMMIT_CONVENTIONS.md  Makefile  ONNX_BASELINE_CLARIFICATION.md  PRIORITY_2_HANDOFF.md  PRIORITY_2_IMPLEMENTATION_PLAN.md  PRIORITY_2_QUICK_FIXES.md  QUALITY_REVIEW_PHASE12.md  README.md  SECURITY_COVERAGE_REPORT.md  SECURITY_REMEDIATION_SUMMARY.md  TEST_BASELINE_REPORT.md  TEST_FIXES_STATUS.md  TEST_FIX_CHECKLIST.md  TRAINING_RECOVERY_IMPLEMENTATION_STATUS.md  WATCHDOG_TIMEOUT_ANALYSIS.md  comprehensive_coverage.json  convert_to_gguf.py  coverage.json  coverage_report.json  debug_coverage.json  eval_coverage.json  final_coverage_check.json  mutation_report_losses.rst  pyproject.toml  pytest.ini  report.json  requirements-core.txt  requirements-dev.txt  requirements-ort.txt  results.json  run_baselines.sh  safety_report.json  security_bandit_report.json  (+13 more)
.caws/: FEAT-001.example.yaml  FEATURE_SPEC_GUIDE.md  policy.yaml  working-spec.yaml
.cursor/: README.md  hooks.json
arbiter/: README.md  __init__.py
capture/: README.md  __init__.py  normalize_trace.py  proxy_server.py  validators.py
codemod/: README.md  test.js
configs/: README.md  convert_coreml.yaml  drafter_4b.yaml  eval_suites.yaml  export_onnx.yaml  hardware_profiles.yaml  judge_4b.yaml  judge_training.yaml  kd_recipe.yaml  memory_budgets.yaml  model_revisions.yaml  precision_islands.yaml  process_supervision.yaml  quant_qat_int8.yaml  student_3b_gqa.yaml  student_3b_kd_cooldown.yaml  student_3b_kd_test.yaml  student_4b_gqa.yaml  student_7b_gqa.yaml  student_8b_gqa.yaml  student_9b_gqa.yaml  tool_schema.json  worker_9b.yaml  worker_9b_quick_test.yaml
(+677 files in other folders)
