[project]
name = "kimi-student"
version = "0.1.0"
description = "Distilled student model for CoreML/ANE on Apple Silicon"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.3",
  "transformers>=4.43",
  "accelerate>=0.33",
  "datasets>=2.20",
  "tokenizers>=0.15",
  "sentencepiece>=0.1.99",
  "onnx>=1.16",
  "onnxruntime>=1.18",
  "coremltools>=7.0",
  "numpy",
  "scipy",
  "typer>=0.12",
  "rich>=13.7",
  "pydantic>=2.8",
  "jsonschema>=4.22",
  "pytest>=8.0",
  "pyyaml>=6.0",
  "requests>=2.31.0",
  "urllib3>=2.0.0",
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "models",
    "coreml",
    "capture",
    "schemas",
    "training",
    "evaluation",
    "scripts",
    "tools",
    "build",
    "arbiter",
    "codemod",
    "conversion",
    "infra",
    "onnx",
]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.yml"]

[tool.ruff]
line-length = 100

[project.optional-dependencies]
dev = [
    "hypothesis>=6.0",
    "mutatest>=0.19.0",
]
